compiler/test/fail_compilation/fix21169.d
/*
TEST_OUTPUT:
---
fail_compilation/fix21169.d(8): Error: undefined identifier `foo`
---
*/

foo
f() {}
